[package]
name = "bevy-pixel-buffers"
version = "0.1.0"
edition = "2021"

[features]
default = ["shapes", "bevy"]

shapes = []
bevy = ["dep:bevy", "dep:image"]

[dependencies]
buffer-graphics-lib = "0.15.1"
graphics-shapes = "0.4.0"

bevy = { version = "0.12", optional = true }
image = { version = "0.24", optional = true }

[dev-dependencies]
criterion = "0.5.1"

[[example]]
name = "main_menu"
path = "examples/main_menu.rs"

[[bench]]
name = "rounded_rectangle"
harness = false
